# Auraq_2.0

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  subjects_registry.yaml
auraq2/: __init__.py  main.py
auraq2/cli/: parser.py
auraq2/core/: ai_classifier.py  compiler.py  docx_exporter.py  downloader.py  extractor.py  pipeline.py  registry_builder.py  subjects_registry.py  topical_compiler.py
auraq2/gui/: app.py  callbacks.py  widgets.py
auraq2/utils/: __init__.py  config.py  helpers.py  logging.py
