[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auraq2"
version = "2.0.0"
description = "Auraq 2.0 — Topical Past Paper Compiler (Registry-First, Batch AI, Parallel)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pymupdf>=1.22.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
auraq2 = "auraq2.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["auraq2*"]
